samples/_failures_safe/1761448105_42ec9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec682c19.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ec682c19.c:178:9: error: expected declaration or statement at end of input
  178 |         }
      |         ^
./samples/SAFE/__tmp_ec682c19.c:178:9: error: expected declaration or statement at end of input
